Fix section background spacing

--- a/src/graspcss/layouts/_about.scss
+++ b/src/graspcss/layouts/_about.scss
@@ -1,5 +1,5 @@
 .about-container {
-  margin-top: $space-8;
+  padding: $space-8 0;
 }
 
 .about-container-inner {
