--- a/src/graspcss/layouts/_service.scss
+++ b/src/graspcss/layouts/_service.scss
@@ -1,7 +1,3 @@
-.service {
-  margin-top: $space-8;
-}
-
 .service-wrapper {
   padding: $space-12 0;
 }
